fap.css
.fap-container {
	display: flex;
	position: fixed;
	z-index: 9999;
	background-color: transparent;
	padding: 20px;
	pointer-events: none;
}
.fap-container > img {
	max-width: 100%;
	max-height: 100%;
	pointer-events: none;
	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
}
/* .fap-container > img[alt="Loading..."] { */
	/* box-shadow: none !important; */
/* } */
.fap-hidden {
	display: none;
	max-width: 32px;
	max-height: 32px;
}
.fap-visible {
	display: flex;
}

